[Maenggar] changing theme

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ a{
 }
 
 .active{
-  background-color: #e9ecef !;
+  background-color: #fff !important;
 }
 
 main {
@@ -27,7 +27,7 @@ main {
 
 .navbar-brand{
   margin-left: 15px;
-  color: #2196f3 !important;
+  color: #a7ff6e !important;
 }
 
 .sidebar-fixed {
@@ -168,10 +168,10 @@ main {
 .activeClass .list-group-item {
   z-index: 5;
   color: #fff;
-  border-color: #007bff;
+  border-color: #a7ff6e;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border-radius: 5px !important;
-  background-color: #007bff !important;
+  background-color:#a7ff6e !important;
 }
 
 .page-footer{
