[Maenggar] adding logo

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@ main {
 
 .sidebar-fixed .logo-wrapper img{
   width: 100%;
-  padding: 2.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.75rem;
 }
 
 .list-group-item {
